--- a/bmc_template/paper.bib
+++ b/bmc_template/paper.bib
@@ -727,4 +727,9 @@
     url={http://autodock.scripps.edu/faqs-help/faq/what-is-the-format-of-a-pdbqt-file},
 }
 
-
+@book{ericson2004real,
+    title={Real-time collision detection},
+    author={Ericson, Christer},
+    year={2004},
+    publisher={CRC Press}
+}
